<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ramon Juan Taller4</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="idUsuario">User ID</string>
    <string name="botonLogin">LOGIN</string>
    <string name="botonRegistro">SIGN IN</string>
    <string name="title_activity_registro">Registro</string>
    <string name="tituloReg">SIGN IN</string>
    <string name="radio0">Fotografo</string>
    <string name="radio1">Tecnico Luces</string>
    <string name="radio2">Tecnico Revelado</string>
    <string name="title_activity_tareas">Tareas</string>
    <string name="infoLogin"></string>
    <string name="textoInformacion"></string>
     <string name="contenidoTarea"></string>
    <string name="addTarea"> + tarea </string>
     <string name="InfoUsuario"> Usuario</string>

</resources>