<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login" >

    <EditText
        android:id="@+id/idUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/idUsuario"
        android:paddingLeft="10dp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/infoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:text="@string/textoInformacion"
        android:textAlignment="center" />

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idUsuario"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:background="@drawable/btnlogin2"
        android:text="@string/botonLogin"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/botonRegistro"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/botonLogin"
        android:layout_below="@+id/botonLogin"
        android:layout_marginTop="16dp"
        android:background="@drawable/btnsign2"
        android:text="@string/botonRegistro"
        android:textColor="@android:color/white" />

</RelativeLayout>